# streamlit-cli

./: .gitignore  .readthedocs.yaml  HOW_TO_RELEASE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml  docs.yml  release-pypi.yml
_notes/: sphinx.md
docs_src/: conf.py  index.rst
src/python_template/: __init__.py  __main__.py
src/python_template/utils/: __init__.py  _utils.py
tests/: test_import.py
